# libuac

./: .gitignore  CMakeLists.txt  README.md
android/: config.h  libuac.mk
cmake/: FindDoctest.cmake  FindLibUSB.cmake
include/: libuac.h
sample/: CMakeLists.txt  example_sdl.cpp
src/: config.h.in  libuac.cpp  logging.h  uac_context.cpp  uac_context.h  uac_device.cpp  uac_device.h  uac_exceptions.cpp  uac_exceptions.h  uac_parser.cpp  uac_parser.h  uac_streaming.cpp  uac_streaming.h  usb_audio.h
tests/: CMakeLists.txt  test.cpp  test_context.cpp  test_parser.cpp  test_usb_device.cpp
